apps/muse.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muse
  labels:
    app: muse
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: muse
  template:
    metadata:
      labels:
        app: muse
    spec:
      containers:
        - name: muse
          image: ghcr.io/museofficial/muse:latest
