apps/homepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: static-web-server
          image: joseluisq/static-web-server:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: static-files
              mountPath: /static
              readOnly: true
      volumes:
        - name: static-files
          configMap:
            name: static-website
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: source-controller
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  hostnames:
    - nikuber.com
  parentRefs:
    - namespace: traefik
      name: traefik
      sectionName: https-topleveldomain
  rules:
    - backendRefs:
        - name: homepage
          port: 8080
