apps/minecraft.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  labels:
    app: minecraft
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
        - name: minecraft
          image: itzg/minecraft-server:latest
          ports:
            - containerPort: 25565
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: default
spec:
  selector:
    app: minecraft
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft
  namespace: default
spec:
  parentRefs:
    - namespace: traefik
      name: traefik
      sectionName: minecraft-protocol
  rules:
    - backendRefs:
        - name: minecraft
          port: 25565
