apps/capacitor.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor
  namespace: flux-system
spec:
  policyTypes:
    - Ingress
  ingress:
    - {}
  podSelector: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  parentRefs:
    - namespace: traefik
      name: traefik
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
    - backendRefs:
        - name: capacitor
          port: 9000
